workspaces/tilings/src-rust/tiling/src/notation/snapshots/tiling__notation__transform__tests__from_string_valid_continuous.snap
---
source: workspaces/tilings/src-rust/tiling/src/notation/./transform_tests.rs
expression: "Transform::from_string(\"r60\", &Shape::Triangle.into())"
---
Ok(
    Continuous(
        TransformContinuous {
            operation: Rotate,
            value: TransformValue {
                increment: 60,
                operation: Rotate,
                seed: Seed {
                    shape: Triangle,
                    offset: Center,
                },
                value: 60,
            },
        },
    ),
)
