workspaces/tilings/src-rust/tiling/src/notation/snapshots/tiling__notation__transform__tests__from_string_valid_eccentric.snap
---
source: workspaces/tilings/src-rust/tiling/src/notation/./transform_tests.rs
expression: "Transform::from_string(\"r(h1)\", &Shape::Triangle.into())"
---
Ok(
    Eccentric(
        TransformEccentric {
            operation: Rotate,
            origin_type: MidPoint,
            origin_index: OriginIndex {
                value: 0,
            },
        },
    ),
)
