workspaces/tilings/src-rust/tiling/src/notation/snapshots/tiling__notation__transform__tests__from_string_with_invalid_origin_index.snap
---
source: workspaces/tilings/src-rust/tiling/src/notation/./transform_tests.rs
expression: "Transform::from_string(\"r(h1a)\", &Shape::Triangle.into())"
---
Err(
    InvalidOriginIndex {
        origin_index: "1a",
        reason: "failed to parse",
    },
)
